Fixed long room topic overlapping room settings.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -2014,6 +2014,8 @@ room-members-sidebar-width = 200px
     height 23px
 
   .topic-container
+    // Leave space for .room-actions-toggle.
+    margin-right 37px
     // Remove top and bottom padding so we can use it for the text box which
     // takes up more vertical space.
     padding-top 0
